[package]
name = "cctmux-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cctmux-protocol = { workspace = true }
cctmux-db = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
